# julia-wasm

./: .gitignore  README.md  build.sh
wasm/: Cargo.toml  build  build.sh
wasm/julia/: Cargo.toml
wasm/julia/src/: canvas.rs  lib.rs
wasm/julia/src/escape_time/: mod.rs
wasm/src/: lib.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.html
web/src/main/: app.ts  appView.scss  appView.tsx  canvasMgr.ts  canvasView.scss  canvasView.tsx  colorizers.ts  dataBundle.ts  hashSignal.ts  imager.ts  index.scss  index.tsx  model.ts  queryHandler.ts  runner.ts  settings.ts  settingsView.scss  settingsView.tsx  view.scss  view.tsx
web/src/main/colorHandling/: colorizers.ts  rgb.ts
web/src/main/lib/: dataBundle.ts  draftSignal.ts  hashSignal.ts
web/src/shared/: IComplex.ts  config.ts  memoryPool.ts  messages.ts
web/src/worker/: chunkOfWork.ts  escapeTimeRunner.ts  index.ts  memoryPool.ts  workerCore.ts
web/src/worker/wasm/: julia-wasm.ts  julia-wasm.wasm  julia_wasm.d.ts  julia_wasm.js  julia_wasm_bg.d.ts  julia_wasm_bg.js  julia_wasm_bg.wasm  julia_wasm_wasm.d.ts  julia_wasm_wasm.js  julia_wasm_wasm.wasm
web/wasm_output/: julia_wasm_bg.d.ts
